2010-09-17  Kingpin  <Martin@BLUEMAX>

	* lib/I18N/Charset.pm (_init_data): new IANA charset list (one new charset defined)

2008-07-05  Kingpin  <Martin@BLUEMAX>

	* lib/I18N/Charset.pm: overhauled the U::Map8 initialization
	(_init_data_extra): added aliases listed in RT#18802

2008-02-15    <Daddy@C-3PO>

	* lib/I18N/Charset.pm: initialize also from Unicode::Map8 .bin files

2007-05-18    <Daddy@C-3PO>

	* lib/I18N/Charset.pm (mib_charset_name): added pod

2007-05-17    <Daddy@C-3PO>

	* lib/I18N/Charset.pm (_init_data): new char-sets document from IANA (maybe no net change, just re-ordered?)
	(mib_charset_name): added pod

2006-12-08    <Daddy@C-3PO>

	* lib/I18N/Charset.pm (_init_data): new IANA charset list (three new charsets defined)

2006-05-02    <Daddy@C-3PO>

	* lib/I18N/Charset.pm (_init_data): fix typo in IANA website

2005-11-12    <Daddy@C-3PO>

	* t/*.t: stop using deprecated IO::Capture::ErrorMessages

2005-08-31    <Daddy@C-3PO>

	* lib/I18N/Charset.pm (_strip): do not pollute IANA charset list with Unicode::Map charset names

2005-01-29  Kingpin  <mthurn@verizon.net>

	* lib/I18N/Charset.pm (_init_data): new IANA charset list (only comments changed)

2004-10-25  Kingpin  <mthurn@verizon.net>

	* lib/I18N/Charset.pm (_init_data_extra): added aliases for Encode;
	fixed some typos in debug messages

2004-02-10  Kingpin  <mthurn@verizon.net>

	* lib/I18N/Charset.pm (_init_data): undo bug in IANA's document
	(_init_data_extra): undo our workaround

2004-02-07  Kingpin  <mthurn@verizon.net>

	* t/bug1.t: skip if Encode is not installed

	* lib/I18N/Charset.pm: new IANA document (one alias added)

2004-01-30  Kingpin  <mthurn@verizon.net>

	* lib/I18N/Charset.pm (_init_data): new IANA document (typos fixed)

2004-01-24  Kingpin  <mthurn@verizon.net>

	* lib/I18N/Charset.pm (_init_data): new IANA document (5 new charsets)

2004-01-15  Kingpin  <mthurn@verizon.net>
