@@ -34,4 +34,4 @@ requires:
   perl: 5.004
 resources:
   license: http://dev.perl.org/licenses/
-version: 1.395
+version: 1.396
